[package]
name = "mars-rover"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
repository = "https://github.com/OliverBrotchie/mars-rover-cli"
description = "A coding exercise in controlling a set of rovers on mars."
keywords = ["cli",]
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
enum-iterator = "1.4.1"
nom = "7.1.3"
